@@ -65,7 +65,7 @@ import org.eclipse.syson.sysml.SysmlFactory;
 import org.eclipse.syson.sysml.Type;
 import org.eclipse.syson.sysml.Usage;
 import org.eclipse.syson.sysml.ViewUsage;
-import org.eclipse.syson.sysml.helper.EMFUtils;
+import org.eclipse.syson.sysml.metamodel.helper.EMFUtils;
 import org.eclipse.syson.sysml.metamodel.services.ElementInitializerSwitch;
 import org.eclipse.syson.sysml.metamodel.services.MetamodelMutationElementService;
 import org.eclipse.syson.sysml.metamodel.services.MetamodelQueryElementService;
@@ -127,64 +127,97 @@ public class DiagramMutationElementService {
     }
 
     /**
-     * Allows to expose the given {@link Element} in a new {@link ViewUsage} that will be type by the a ViewDefinition
-     * (represented by its qualified name). The given {@link Element} is also removed from the exposed elements of the
-     * existing {@link ViewUsage} associated to the given {@code selectedNode}. The new {@link ViewUsage} will be
-     * exposed in the existing {@link ViewUsage}.
+     * Allows to expose the given {@link Element elements} in a new {@link ViewUsage} typed by the target
+     * ViewDefinition. Each selected element is removed from the exposed elements of its existing {@link ViewUsage}
+     * associated to the matching selected node, then re-exposed in the newly created {@link ViewUsage}, which is
+     * itself exposed in each source {@link ViewUsage}.
      *
-     * @param element
-     *            the {@link Element} to expose in a new ViewUsage.
+     * @param elements
+     *            the {@link Element elements} to expose in the new {@link ViewUsage}.
      * @param newViewDefinition
-     *            the ViewDefinition (represented by its qualified name) that will be the type of the new ViewUsage.
+     *            the qualified name of the target ViewDefinition.
      * @param editingContext
      *            the {@link IEditingContext} of the tool. It corresponds to a variable accessible from the variable
      *            manager.
      * @param diagramContext
      *            the {@link DiagramContext} of the tool. It corresponds to a variable accessible from the variable
      *            manager.
-     * @param convertedNodes
-     *            the map of all existing node descriptions in the DiagramDescription of this Diagram. It corresponds to
-     *            a variable accessible from the variable manager.
-     * @return the new {@link ViewUsage} or the given {@link Element} if its existing associated {@link ViewUsage} has
-     *         not been found.
+     * @param selectedNodes
+     *            the selected graphical nodes matching the provided {@code elements}.
+     * @return the created {@link ViewUsage}, wrapped in a list when it exists.
      */
-    public Element viewNodeAs(Element element, String newViewDefinition, IEditingContext editingContext, DiagramContext diagramContext, Node selectedNode) {
-        var existingViewUsage = this.diagramQueryElementService.getViewUsage(editingContext, diagramContext, selectedNode);
+    public ViewUsage viewNodeAs(List<Element> elements, String newViewDefinition, IEditingContext editingContext, DiagramContext diagramContext, List<Node> selectedNodes) {
+        ViewUsage newViewUsage = null;
+        var existingViewUsage = this.diagramQueryElementService.getViewUsage(editingContext, diagramContext, selectedNodes.get(0));
         if (existingViewUsage != null) {
-            Element viewUsageContainer = existingViewUsage.getOwner();
-            // 1 - create a new ViewUsage in the viewUsageContainer, typed by the ViewDefinition corresponding to the
-            // newViewDefinition
-            var newViewUsage = SysmlFactory.eINSTANCE.createViewUsage();
-            var newViewUsageMembership = this.metamodelMutationElementService.createMembership(viewUsageContainer);
-            newViewUsageMembership.getOwnedRelatedElement().add(newViewUsage);
-            var elementInitializerSwitch = new ElementInitializerSwitch();
-            elementInitializerSwitch.doSwitch(newViewUsage);
-            this.modelMutationElementService.setAsView(newViewUsage, newViewDefinition);
-
-            // 2 - move the element and its children from the existingViewUsage to new newViewUsage
-            var exposed = existingViewUsage.getOwnedImport().stream()
-                    .filter(Expose.class::isInstance)
-                    .map(Expose.class::cast)
-                    .toList();
-            this.moveExposedElements(element, exposed, newViewUsage);
-
-            // 3 - expose the new ViewUsage in the existingViewUsage
-            if (!existingViewUsage.getExposedElement().contains(newViewUsage)) {
-                var membershipExpose = SysmlFactory.eINSTANCE.createMembershipExpose();
-                membershipExpose.setImportedMembership(newViewUsage.getOwningMembership());
-                existingViewUsage.getOwnedRelationship().add(membershipExpose);
-                elementInitializerSwitch.doSwitch(membershipExpose);
-            }
-            // 4 - expose the element and its sub elements previously exposed in the existingViewUsage in the
-            // newViewUsage
-            var membershipExpose = SysmlFactory.eINSTANCE.createMembershipExpose();
-            membershipExpose.setImportedMembership(element.getOwningMembership());
-            newViewUsage.getOwnedRelationship().add(membershipExpose);
-            elementInitializerSwitch.doSwitch(membershipExpose);
-
-            return newViewUsage;
+            newViewUsage = this.createViewUsage(existingViewUsage.getOwner(), newViewDefinition);
+            this.moveSelectedElementsToViewUsage(elements, existingViewUsage, newViewUsage);
+            this.exposeNewViewUsageInExistingOne(existingViewUsage, newViewUsage);
         }
-        return element;
+        return newViewUsage;
+    }
+
+    /**
+     * Creates the semantic {@link ViewUsage} used by the {@code View As} tool.
+     *
+     * @param viewUsageContainer
+     *            the owner of the new {@link ViewUsage}.
+     * @param newViewDefinition
+     *            the qualified name of the target ViewDefinition.
+     * @return the created {@link ViewUsage}.
+     */
+    private ViewUsage createViewUsage(Element viewUsageContainer, String newViewDefinition) {
+        var newViewUsage = SysmlFactory.eINSTANCE.createViewUsage();
+        var newViewUsageMembership = this.metamodelMutationElementService.createMembership(viewUsageContainer);
+        newViewUsageMembership.getOwnedRelatedElement().add(newViewUsage);
+        var elementInitializerSwitch = new ElementInitializerSwitch();
+        elementInitializerSwitch.doSwitch(newViewUsage);
+        this.modelMutationElementService.setAsView(newViewUsage, newViewDefinition);
+        return newViewUsage;
+    }
+
+    /**
+     * Exposes the the new {@link ViewUsage} in the existing {@link ViewUsage}.
+     *
+     * @param existingViewUsage
+     *            the existing {@link ViewUsage}.
+     * @param newViewUsage
+     *            the created {@link ViewUsage}.
+     */
+    private void exposeNewViewUsageInExistingOne(ViewUsage existingViewUsage, ViewUsage newViewUsage) {
+        if (!existingViewUsage.getExposedElement().contains(newViewUsage)) {
+            var membershipExpose = SysmlFactory.eINSTANCE.createMembershipExpose();
+            membershipExpose.setImportedMembership(newViewUsage.getOwningMembership());
+            existingViewUsage.getOwnedRelationship().add(membershipExpose);
+            var elementInitializerSwitch = new ElementInitializerSwitch();
+            elementInitializerSwitch.doSwitch(membershipExpose);
+        }
+    }
+
+    /**
+     * Moves the selected elements and its exposed descendants to the newly created {@link ViewUsage}.
+     *
+     * @param elementsToMove
+     *            the selected elements.
+     * @param existingViewUsage
+     *            the existing {@link ViewUsage}.
+     * @param newViewUsage
+     *            the created {@link ViewUsage}.
+     */
+    private void moveSelectedElementsToViewUsage(List<Element> elementsToMove, ViewUsage existingViewUsage, ViewUsage newViewUsage) {
+        var exposed = existingViewUsage.getOwnedImport().stream()
+                .filter(Expose.class::isInstance)
+                .map(Expose.class::cast)
+                .toList();
+        for (Element elementToMove : elementsToMove) {
+            this.moveExposedElements(elementToMove, exposed, newViewUsage);
+            if (!newViewUsage.getExposedElement().contains(elementToMove)) {
+                var membershipExpose = SysmlFactory.eINSTANCE.createMembershipExpose();
+                membershipExpose.setImportedMembership(elementToMove.getOwningMembership());
+                newViewUsage.getOwnedRelationship().add(membershipExpose);
+                new ElementInitializerSwitch().doSwitch(membershipExpose);
+            }
+        }
     }
 
     private void moveExposedElements(Element element, List<Expose> exposed, ViewUsage newViewUsage) {
@@ -400,15 +433,16 @@ public class DiagramMutationElementService {
     public StateUsage createChildState(Element parentState, IEditingContext editingContext, DiagramContext diagramContext, Node selectedNode,
             Map<org.eclipse.sirius.components.view.diagram.NodeDescription, NodeDescription> convertedNodes, boolean isParallel, boolean isExhibit) {
         StateUsage childState = this.utilService.createChildState(parentState, isParallel, isExhibit);
-        if (selectedNode.getInsideLabel().getText().equals(STATE_TRANSITION_COMPARTMENT_NAME)) {
-            this.createView(childState, editingContext, diagramContext, selectedNode, convertedNodes);
-        } else {
-            selectedNode.getChildNodes().stream().filter(child -> child.getInsideLabel().getText().equals(STATE_TRANSITION_COMPARTMENT_NAME)).findFirst()
-                    .ifPresent(compartmentNode -> {
-                        this.createView(childState, editingContext, diagramContext, compartmentNode, convertedNodes);
-                    });
+        if (selectedNode != null) {
+            if (selectedNode.getInsideLabel().getText().equals(STATE_TRANSITION_COMPARTMENT_NAME)) {
+                this.createView(childState, editingContext, diagramContext, selectedNode, convertedNodes);
+            } else {
+                selectedNode.getChildNodes().stream().filter(child -> child.getInsideLabel().getText().equals(STATE_TRANSITION_COMPARTMENT_NAME)).findFirst()
+                        .ifPresent(compartmentNode -> {
+                            this.createView(childState, editingContext, diagramContext, compartmentNode, convertedNodes);
+                        });
+            }
         }
-
         return childState;
     }
 
@@ -615,14 +649,6 @@ public class DiagramMutationElementService {
      *            the given {@link SatisfyRequirementUsage}.
      * @param newSource
      *            the new source {@link Element}.
-     * @param sourceNode
-     *            new source node of the edge
-     * @param targetNode
-     *            target node of the edge
-     * @param editingContext
-     *            the editing context
-     * @param diagram
-     *            the context diagram
      * @return the given {@link SatisfyRequirementUsage}.
      */
     public SatisfyRequirementUsage reconnectSatisfyRequirementSource(SatisfyRequirementUsage sru, Element newSource) {
@@ -771,12 +797,14 @@ public class DiagramMutationElementService {
      */
     public FlowUsage createFlowUsageWithPayload(ConnectionUsage parent, Type payloadType) {
         var connectionTypes = parent.getType();
-        if (connectionTypes.size() > 0 && connectionTypes.get(0).getOwnedEndFeature().size() >= 2) {
-            var connectionType = connectionTypes.get(0);
+        if (!connectionTypes.isEmpty() && connectionTypes.getFirst().getOwnedEndFeature().size() >= 2) {
+            var connectionType = connectionTypes.getFirst();
             Feature source = connectionType.getOwnedEndFeature().get(0);
             Feature target = connectionType.getOwnedEndFeature().get(1);
             var flowUsage = this.metamodelMutationElementService.createFlowUsage(source, target, connectionType, connectionType, parent);
-            flowUsage.getOwnedRelationship().add(this.createPayloadFeatureMembership(payloadType));
+            if (payloadType != null) {
+                flowUsage.getOwnedRelationship().add(this.createPayloadFeatureMembership(payloadType));
+            }
             return flowUsage;
         } else {
             return null;
